2025-09-17  Zhengyi Fu  <i@fuzy.me>

	Really fix `+gnus-read-ephemeral-emacs-search-group'

	* init.el (+gnus-read-ephemeral-emacs-search-group): Require
	`gnus-group'.

2025-09-17  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/telega-config.el (telega): set default-directory to ~/.

2025-09-17  Zhengyi Fu  <i@fuzy.me>

	Improve gptel-tools user rejection message clarity

	* site-lisp/gptel-tools.el (gptel-tools--ediff-file-with-buffer):
	Update the tool results for rejected changes to provide clearer
	feedback when users reject proposed changes.  The message now
	clearly states that changes were not applied and provides better
	formatting for user-requested modifications.

2025-09-17  Zhengyi Fu  <i@fuzy.me>

	Improve help-fns-function-source-code robustness

	* init.el (help-fns-function-source-code): Rewrite function to use
	condition-case to ignore errors.  Preserve buffer and point
	positions during source code extraction.

2025-09-16  Zhengyi Fu  <i@fuzy.me>

	Fix +gnus-read-ephemeral-emacs-search-group

	* init.el (+gnus-read-ephemeral-emacs-search-group): Require `mml' and `mm-url'.
	(url-http-response-status): Declare the variable.

2025-09-16  Zhengyi Fu  <i@fuzy.me>

	Unify error handling in gptel-tools.el

	* site-lisp/gptel-tools.el (gptel-tools--write-file-async)
	(gptel-tools--insert-async, gptel-tools--grep-async)
	(gptel-tools--url-retrieve, gptel-tools--read-url-async)
	(gptel-tools--search-web-async)
	(gptel-tools--search-jira-issues-async)
	(gptel-tools--get-jira-issue-async): Unify error handling.

2025-09-16  Zhengyi Fu  <i@fuzy.me>

	Enable semantic highlighting of Elisp

	* packages.el: New package `semel'.
	* init.el: Enable it.

2025-09-16  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/dotemacs-core.el (with-no-compile!): Add indentation
	declaration.

2025-09-16  Zhengyi Fu  <i@fuzy.me>

	* init.el: Bind "M-g r" to `consult-grep-match'.

2025-09-15  Zhengyi Fu  <i@fuzy.me>

	Pre-build binaries for rime, pdf-tools and telega
